<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sunset"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/layoutJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belajar"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_form_login"
            android:hint="@string/emailAddres"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cekEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email format fail"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_form_login"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingEnd="34dp"
                android:textColorHint="#999999"
                android:textSize="12sp"
                tools:ignore="HardcodedText"/>

            <ImageView
                android:id="@+id/hidePassword"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/ic_visibility_black_24dp" />

            <ImageView
                android:id="@+id/showPaswrod"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/ic_visibility_off_black_24dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/cekPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password min 8 char"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:background="@drawable/ripple_red_rounded_new"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothaveAccount"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hire"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:background="@drawable/background_form_login">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    android:background="@drawable/background_form_login">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/facebook_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facebok"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textSize="14sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-or-"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:shadowColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="@color/gray"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    android:background="@drawable/background_form_login">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/google_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Google"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>